# Simple-Web-Server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gcovr.cfg  project_requirements.txt
include/: bbuf.h  command_line.h  http.h  rio.h
include_private/: bbuf_private.h  command_line_private.h  http_private.h
include_public/: bbuf.h  command_line.h  http.h  log.h  rio.h
src/: bbuf.c  command_line.c  http.c  main.c  rio.c
tests/: CMakeLists.txt
tests/integration/: client_connection_test.py
tests/ut_src/: mocks.c  test_bbuf.c  test_command_line.c  test_http.c  test_main.c
